# vigil

./: .gitignore  Cargo.toml  Dockerfile
.github/workflows/: ci.yml
client/: package-lock.json  package.json
client/public/: index.html
client/src/: App.tsx  CreateHostDialog.tsx  HostCard.tsx  index.tsx  setupProxy.js
src/: api.rs  db.rs  main.rs  net.rs  schema.sql
