[package]
name = "vigil"
version = "0.1.0"
authors = ["Hasan Ali <git@hasali.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1.1.1"
actix-web = "2.0.0"
dotenv = "0.15.0"
env_logger = "0.7.1"
log = "0.4.11"
serde = "1.0"
serde_json = "1.0"
tokio = { version = "0.2.21", features = ["udp"] }

[dependencies.sqlx]
version = "0.3.5"
default-features = false
features = ["runtime-tokio", "sqlite", "macros"]
